simple-api/rolling-update-no-istio/simple-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-api
  namespace: api    
  
  labels:
    app: simple-api
    
   
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-api
  template:
    metadata:
      
      labels:
        app: simple-api     
      

    spec:
      containers:
        - name: simple-api
          image: oscka/simple-api
          ports:
          - name: http
            containerPort: 8080
