simple-api/rolling-update-no-istio/simple-api-svc.yaml
apiVersion: v1
kind: Service

metadata:
  name: simple-api-svc
  namespace: sample
spec:
  selector:
    app: simple-api  ## add 2
  ports:
  - protocol: TCP
    name: http
    port: 8080
    targetPort: http
