simple-api/rolling-update-no-istio/simple-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-api-ingress
  namespace: sample
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "simple-api.192.168.56.10.sslip.io"   # add 원복
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: simple-api-svc
            port:
              number: 8080
